# resumesh-scrapers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  pr-title-check.yml  release-please.yml
examples/: behance.py  devto.py  github.py  medium.py  npm.py  pypi.py  run_scrapers.py  substack.py
src/resumesh_scrapers/: __init__.py  base.py  devto_scraper.py  exceptions.py  github_scraper.py  http_client.py  medium_scraper.py  models.py
src/resumesh_scrapers/core/: __init__.py  client.py  middleware.py
src/resumesh_scrapers/models/: __init__.py  article.py  behance.py  devto.py  github.py  medium.py  npm.py  pypi.py  substack.py
tests/: test_devto_scraper.py  test_github_scraper.py  test_medium_scraper.py  test_models_and_exceptions.py  test_pypi_scraper.py
