[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resumesh-scrapers"
dynamic = ["version"]
description = "Standalone, reusable web scraping services for GitHub, Dev.to, and Medium — extracted from the ResuMesh project."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Ata Can Yaymacı" },
]
keywords = ["scraper", "github", "medium", "devto", "portfolio", "cv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "feedparser>=6.0",
    "tenacity>=8.0",
    "beautifulsoup4>=4.0",
]

[project.urls]
Homepage = "https://github.com/AtaCanYmc/resumesh-scrapers"
Repository = "https://github.com/AtaCanYmc/resumesh-scrapers"
Issues = "https://github.com/AtaCanYmc/resumesh-scrapers/issues"
Changelog = "https://github.com/AtaCanYmc/resumesh-scrapers/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/resumesh_scrapers/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/resumesh_scrapers"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["resumesh_scrapers"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
